add challenge page and fix schedule-id bug

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -16,6 +16,23 @@
 
                 <div class="row">
                     <div class="col-md-7">
+
+                        <div class="card my-3  challenges-button">
+                            <a href="/challenges">
+
+                            <div class="card-body text-center">
+                                <h4 class="heading-card heading-font">
+                                        View Challenges and Prizes
+
+                                    
+                                </h4>
+                            </div>
+                        </a>
+                        </div>
+
+
+
+
                         <div class="card mb-3">
                             <div class="card-body">
                                 <h4 class="heading-card heading-font mb-3"> Internet Access</h4>
@@ -44,7 +61,7 @@
                                             <td>911</td>
                                         </tr>
                                         <tr>
-                                            <td>Campus Safety Services: </td>
+                                            <td>Carleton University Police: </td>
                                             <td><%=info.emergency%></td>
                                         </tr>
                                         <tr>
