--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </body>
 
 </html>
-<!-- <script>
+<script>
     let g = "color:#9756D8;font-weight:bold;";
     let b = "color:#9756D8;font-weight:bold;";
     let base22MainStyle = "font-size:34px; font-weight:200; letter-spacing:0.02em; line-height:1.4em; font-family:helvetica,arial; color:rgba(0,0,0,0.9);";
@@ -41,4 +41,4 @@
     console.log("%ccuHacking 2020", base22MainStyle),
         console.log("%cRiver Building @Carleton University", base22MessageStyle),
         console.log("%c", "font-size:34px; line-height:1.4em;");
-</script> -->
+</script>
