--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,6 +28,18 @@
             </a>
         </li>
 
+        <li class="nav-item show-challenge-link">
+            <a class="nav-link m-0 p-0" id="challenge-link" href="/challenges">
+                <div class="row">
+                    <div class="col-1 p-0 d-none d-md-block" id="active-box-challenge"></div>
+                    <div class="col-11">
+                        <p class="mx-2 my-1 challenge-link" id="links34"><i class="fas fa-medal mr-md-2"></i> Challenges
+                        </p>
+                    </div>
+                </div>
+            </a>
+        </li>
+
         <li class="nav-item">
             <a class="nav-link m-0 p-0" id="map-link" href="/map">
                 <div class="row">
@@ -38,6 +50,7 @@
                 </div>
             </a>
         </li>
+
 
         <li class="nav-item">
             <a class="nav-link m-0 p-0" id="info-link" href="/info">
