--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,7 +28,8 @@
                                 <input type="password" id="login-password" required />
                             </div>
                             <div class="text-right mr-4 my-2">
-                                <a href="https://my.cuhacking.com/forgot" class="mr-4 forgot-link">Forgot Password</a>
+                                <a href="http://my.cuhacking.com/forgot" class="mr-4 forgot-link">Forgot your
+                                    Password?</a>
                             </div>
                             <button class="my-4 login-button">Login</button>
                         </form>
