--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -66,10 +66,10 @@
                     </div>
                     <div class="col-9">
                         <div class="card my-1 updates-cards <%=schedule.type%>">
-                            <a data-toggle="modal" href="#<%=schedule.id%>" class="schedule-moreinfo">
+                            <a data-toggle="modal" href="#a<%=schedule.id%>" class="schedule-moreinfo">
 
                                 <div class="card-body">
-                                    <div class="modal fade" id="<%=schedule.id%>" tabindex="-1" role="dialog"
+                                    <div class="modal fade" id="a<%=schedule.id%>" tabindex="-1" role="dialog"
                                         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered" role="document">
                                             <div class="modal-content">
